DesignProject/tests/pass/test02_pass.src
func max(a : int, b : int) -> int {
    local result : int;
    if (a > b) then {
        result := a;
    } else {
        result := b;
    }
    return(result);
}

