DesignProject/tests/error/test02_error.src
func compute(a : int, b : int) -> int {
    local result : int;
    result := a + "hello";
    return(result);
}

